--- a/templates/PiDashDisplay/home.html
+++ b/templates/PiDashDisplay/home.html
@@ -16,7 +16,7 @@
   <body>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="{% static 'PiDashDisplay/js/PiDash.js' %}"></script>
@@ -27,7 +27,7 @@
 
                     <div class="text-center"><img src="{% static 'PiDashDisplay/images/sunny.png' %}" /></div>
                     <div class="text-center littletopspace" id="datedisplaypanel">--</div>
-                    <div class="text-center">Sunny | 24 &#x2103;</div>
+                    <div class="text-center"><span id="forecastdisplaypanel">-</span> | <span id="tempdisplaypanel">-</span> &#x2103;</div>
 
                 </div>
                 <!-- End Weather Forecast Panel -->
