--- a/static/PiDashDisplay/css/style.css
+++ b/static/PiDashDisplay/css/style.css
@@ -16,3 +16,9 @@ body{
     font-weight: 700;
     color:#61656b;
 }
+
+.newspanelheader{
+    font-family: 'Kreon', serif;
+    font-weight:700;
+    color:#61656b;
+}
