--- a/templates/PiDashDisplay/home.html
+++ b/templates/PiDashDisplay/home.html
@@ -19,6 +19,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://js.pusher.com/4.3/pusher.min.js"></script>
     <script src="{% static 'PiDashDisplay/js/PiDash.js' %}"></script>
         <div class="container-fluid">
             <div class="row">
@@ -35,7 +36,19 @@
 
 
                     <div class="newspanelheader">News Panel</div>
-                    
+
+                    <div id="newscontent">
+                        {% for currentNews in latest_news %}
+                            <div class="row newsitem">
+                                <div class="col-md-2">
+                                    <div class="newsitemimage"><img src='{{ currentNews.thumbnail }}' height="30" /></div>
+                                </div>
+                                <div class="col-md-10">
+                                    <div class="newsitemcontent">{{ currentNews.title }}</div>
+                                </div>
+                            </div>
+                        {% endfor %}
+                    </div>
 
 
                 </div>
