--- a/templates/PiDashDisplay/home.html
+++ b/templates/PiDashDisplay/home.html
@@ -20,6 +20,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="https://js.pusher.com/4.3/pusher.min.js"></script>
+    <script src="{% static 'PiDashDisplay/js/jquery.easytabs.min.js' %}"></script>
     <script src="{% static 'PiDashDisplay/js/PiDash.js' %}"></script>
         <div class="container-fluid">
             <div class="row">
@@ -57,7 +58,18 @@
 
 
                 <!-- Right panel -->
-                <div class="col-md-6">Test 2</div>
+                <div class="col-md-6">
+                    <ul class="nav nav-tabs">
+                      <li class="nav-item">
+                        <a class="nav-link active" href="#">To-Dos</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">IdeaPad</a>
+                      </li>
+
+                    </ul>
+
+                </div>
                 <!-- End Right Panel -->
             </div>
         </div>
